--- a/Web du lịch/index.html
+++ b/Web du lịch/index.html
@@ -6,9 +6,6 @@
     <meta name="description" content="Start your development with JoeBLog landing page.">
     <meta name="author" content="Devcrud">
     <title>Tour and life</title>
-    <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + JoeBLog main styles -->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -17,15 +14,8 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/imgs/logo.png" alt="">
+                <img src="logo.png" alt="">
             </a>
-            <div class="socials">
-                <a href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
-                <a href="javascript:void(0)"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)"><i class="ti-youtube"></i></a>
-            </div>
         </div>
     </nav>
     <!-- End Of First Navigation -->
@@ -98,8 +88,8 @@
                         </small>
                     </div>
                     <div class="card-body">
-                        <div class="blog-media">
-                            <img src="assets/imgs/blog-6.jpg" alt="" class="w-100">
+                        <div class="./img/">
+                            <img src="./img/blog-6.jpg" alt="" class="w-100">
                             <a href="#" class="badge badge-primary">#Salupt</a>     
                         </div>  
                         <p class="my-3">One of my favorite places in Vietnam, Hoi An, is not to be missed! Beautiful Hoi An is the most atmospheric city in Vietnam, with so much amazing historical architecture. </p>
@@ -116,8 +106,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-2.jpg" alt="" class="w-100">
+                                <div class="./img/">
+                                    <img src="./img/blog-2.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#Placeat</a>        
                                 </div>  
                             </div>
@@ -138,8 +128,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-3.jpg" alt="" class="w-100">
+                                <div class="./img/">
+                                    <img src="./img/blog-3.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#dolores</a>        
                                 </div>  
                             </div>
@@ -162,8 +152,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-4.jpg" alt="" class="w-100">
+                                <div class="./img/./img/">
+                                    <img src="./img/blog-4.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#amet</a>       
                                 </div>  
                             </div>
@@ -184,8 +174,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-5.jpg" alt="" class="w-100">
+                                <div class="">
+                                    <img src="./img/blog-5.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#lorem</a>      
                                 </div>  
                             </div>
@@ -208,8 +198,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-1.jpg" alt="" class="w-100">
+                                <div class="./img/">
+                                    <img src="./img/blog-1.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#lipsum</a>     
                                 </div>  
                             </div>
@@ -230,8 +220,8 @@
                     <div class="col-lg-6">
                         <div class="card text-center mb-5">
                             <div class="card-header p-0">                                   
-                                <div class="blog-media">
-                                    <img src="assets/imgs/blog-7.jpg" alt="" class="w-100">
+                                <div class="./img/">
+                                    <img src="./img/blog-7.jpg" alt="" class="w-100">
                                     <a href="#" class="badge badge-primary">#Elit</a>       
                                 </div>  
                             </div>
@@ -261,7 +251,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
-                    <img src="assets/imgs/logo.svg" alt="" class="logo">
+                    <img src="logo.svg" alt="" class="logo">
                 </div>
                 <div class="col-md-9 text-center text-md-right">
                     <div class="socials">
@@ -282,8 +272,8 @@
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
-    <!-- JoeBLog js -->
-    <script src="assets/js/joeblog.js"></script>
+    <!-- Joe./img/blog js -->
+    <script src="assets/js/joe./img/blog.js"></script>
 
 </body>
 </html>
