--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="booking.html">Trang Chủ</a>
         <a href="booking.html">Dịch Vụ Booking</a>
-        <a href="#contact">Liên Hệ</a>
+        <a href="contact.html">Liên Hệ</a>
     </nav>
     <section id="home">
         <h2>Explore Your Next Adventure</h2>
